--- a/test.html
+++ b/test.html
@@ -8,23 +8,29 @@
 </head>
 <body>
     <section class="questions section">
-        <div class="question" id="question-2">
-            <h3>How many vitamins or supplements do you currently take?</h3>
-            <div class="response-section">
-                <div class="response-box" data-next-question="question-4">
-                    <img src="assets/None.svg" alt="" class="response-img">
-                    <p>None</p>
-                </div>
-                <div class="response-box" data-next-question="question-4">
-                    <img src="assets/1-4.svg" alt="" class="response-img">
-                    <p>1-4</p>
-                </div>
-                <div class="response-box" data-next-question="question-4">
-                    <img src="assets/1-5.svg" alt="" class="response-img">
-                    <p>5+</p>
-                </div>
+        <div class="question" id="question-3">
+            <h3>In an average week, how often do you take powders?</h3>
+            <div class="radio-list">
+                <div class="radio-item">
+                    <input name="radio" id="radio1" type="radio">
+                    <label for="radio1">
+                        Rarely
+                    </label></div>
+                <div class="radio-item">
+                    <input name="radio" id="radio2" type="radio">
+                    <label for="radio2">
+                        Couple days
+                    </label></div>
+                <div class="radio-item">
+                    <input name="radio" id="radio3" type="radio">
+                    <label for="radio3">
+                        Most days
+                    </label></div>
             </div>
         </div>
     </section>
 </body>
 </html>
+
+
+
