--- a/quiz.html
+++ b/quiz.html
@@ -133,28 +133,38 @@
             <h3>What sex best describes you?</h3>
             <div class="radio-list">
                 <div class="radio-item">
-                    <input name="radio" id="radio1" type="radio" data-next-question="question-4">
-                    <label for="radio1">
+                    <input name="radio" id="radio4" type="radio">
+                    <label for="radio4">
                         Male
-                    </label></div>
+                    </label>
+                </div>
                 <div class="radio-item">
-                    <input name="radio" id="radio2" type="radio" data-next-question="question-4">
-                    <label for="radio2">
+                    <input name="radio" id="radio5" type="radio">
+                    <label for="radio5">
                         Female
-                    </label></div>
+                    </label>
+                </div>
                 <div class="radio-item">
-                    <input name="radio" id="radio3" type="radio" data-next-question="question-4">
-                    <label for="radio3">
+                    <input name="radio" id="radio6" type="radio">
+                    <label for="radio6">
                         Prefer not to say
-                    </label></div>
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="goals section" style="display: none;">
+            <img src="assets/goals-bg.jpg" alt="" class="white-bg">
+            <div class="basics-content">
+                <h3>02</h3>
+                <h1>Goals</h1>
+                <p>Start by giving us some basic background info so we 
+                    understand where you are in your path to wellness.</p>
+                <a href="#" class="next-question">Next Question</a>
             </div>
         </div>
     </section>
-    <section class="goals section">
-        <h3>Choose your health goals</h3>
-        <p>Select all that matter to you, and we'll explore them together.</p>
-        
-    </section>
+
+
 
     <!-- JQuery for animations -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
