ending the night off with a commit yessirrrrrrrr

--- a/test.html
+++ b/test.html
@@ -5,29 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/test.css">
+    <script src="https://kit.fontawesome.com/3651e21373.js"></script>
+
 </head>
 <body>
     <section class="questions section">
-        <div class="question" id="question-3">
-            <h3>In an average week, how often do you take powders?</h3>
-            <div class="radio-list">
-                <div class="radio-item">
-                    <input name="radio" id="radio1" type="radio">
-                    <label for="radio1">
-                        Rarely
-                    </label></div>
-                <div class="radio-item">
-                    <input name="radio" id="radio2" type="radio">
-                    <label for="radio2">
-                        Couple days
-                    </label></div>
-                <div class="radio-item">
-                    <input name="radio" id="radio3" type="radio">
-                    <label for="radio3">
-                        Most days
-                    </label></div>
+  
+        <div class="choose-goals">
+            <div class="goals-header">
+                <h3>Choose your health goals</h3>
+                <p>Select all that matter to you, and we'll explore them together</p>
+            </div>
+            <div class="tile-container">
+            <div class="tile">
+                <input type="checkbox" name="fitness" id="fitness1">
+                <label for="fitness1">
+                    <i class="fas fa-dumbbell"></i>
+                    <h6>Fitness</h6>
+                </label>
+            </div>
+            <div class="tile">
+                <input type="checkbox" name="Energy" id="Energy1">
+                <label for="energy1">
+                    <i class="fas fa-bolt-lightning"></i>
+                    <h6>Energy</h6>
+                </label>
+            </div>
+            <div class="tile">
+                <input type="checkbox" name="Brain" id="Brain1">
+                <label for="Brain1">
+                    <i class="fas fa-brain"></i>
+                    <h6>Brain</h6>
+                </label>
+            </div>
+            <div class="tile">
+                <input type="checkbox" name="Digestion" id="Digestion1">
+                <label for="Digestion1">
+                    <i class="fas fa-burger"></i>
+                    <h6>Digestion</h6>
+                </label>
+            </div>
+            <div class="tile">
+                <input type="checkbox" name="Hair, Skin & Nails" id="Hair, Skin & Nails1">
+                <label for="Hair, Skin & Nails1">
+                    <i class="fas fa-hand-dots"></i>
+                    <h6>Hair, Skin & Nails</h6>
+                </label>
+            </div>
+            <div class="tile">
+                <input type="checkbox" name="Immunity" id="Immunity1">
+                <label for="Immunity1">
+                    <i class="fas fa-syringe"></i>
+                    <h6>Immunity</h6>
+                </label>
             </div>
         </div>
+    </div> 
     </section>
 </body>
 </html>
