--- a/quiz.html
+++ b/quiz.html
@@ -23,7 +23,7 @@
     </section>
     <div class="hello section" style="display: none;">
         <span class="emoji">👋</span>
-        <h1>Hello there!<span class="emoji">👋</span></h1>
+        <h1>Hello there, <span id="user-greeting"></span>!<span class="emoji">👋</span></h1>
     </div>
     <section class="quiz section" style="display: none;">
         <h1>What is your age?</h1>
@@ -159,16 +159,66 @@
                 <h1>Goals</h1>
                 <p>Start by giving us some basic background info so we 
                     understand where you are in your path to wellness.</p>
-                <a href="#" class="next-question">Next Question</a>
+                <a href="#" class="next-question-goals">Next Question</a>
             </div>
         </div>
+
+        <div class="choose-goals" style="display: none;">
+            <div class="goals-header">
+                <h3>Choose your health goals</h3>
+                <p>Select all that matter to you, and we'll explore them together</p>
+            </div>
+            <div class="tile-container">
+            <div class="tile">
+                <input type="checkbox" name="fitness" id="fitness1">
+                <label for="fitness1">
+                    <i class="fas fa-dumbbell"></i>
+                    <h6>Fitness</h6>
+                </label>
+            </div>
+            <div class="tile">
+                <input type="checkbox" name="Energy" id="Energy1">
+                <label for="energy1">
+                    <i class="fas fa-bolt-lightning"></i>
+                    <h6>Energy</h6>
+                </label>
+            </div>
+            <div class="tile">
+                <input type="checkbox" name="Brain" id="Brain1">
+                <label for="Brain1">
+                    <i class="fas fa-brain"></i>
+                    <h6>Brain</h6>
+                </label>
+            </div>
+            <div class="tile">
+                <input type="checkbox" name="Digestion" id="Digestion1">
+                <label for="Digestion1">
+                    <i class="fas fa-burger"></i>
+                    <h6>Digestion</h6>
+                </label>
+            </div>
+            <div class="tile">
+                <input type="checkbox" name="Hair, Skin & Nails" id="Hair, Skin & Nails1">
+                <label for="Hair, Skin & Nails1">
+                    <i class="fas fa-hand-dots"></i>
+                    <h6>Hair, Skin & Nails</h6>
+                </label>
+            </div>
+            <div class="tile">
+                <input type="checkbox" name="Immunity" id="Immunity1">
+                <label for="Immunity1">
+                    <i class="fas fa-syringe"></i>
+                    <h6>Immunity</h6>
+                </label>
+            </div>
+        </div>
+    </div> 
     </section>
 
 
 
     <!-- JQuery for animations -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
     <script type="module" src="JS/quiz.js"></script>
     
 </body>
