--- a/test.html
+++ b/test.html
@@ -26,9 +26,19 @@
                 <div class="quiz-box">
                     <div class="quiz-header">
                         <h2 class="question-text">What's Your Age?</h2>
-                    
-                    <div class="option-list">
+                        <h6 class="question-desc">Like how old are you bruh</h6>
                     </div>
+                    <div class="option-list">
+                            <div class="option">
+                                <span>Test</span>
+                        </div>
+                            <div class="option">
+                                <span>Test</span>
+                        </div>
+                            <div class="option">
+                                <span>Test</span>
+                </div>
+            </div>
 
                     <div class="quiz-footer">
                         <button class="prev-btn">Prev</button>
