--- a/test.html
+++ b/test.html
@@ -25,18 +25,18 @@
             <section class="quiz-section">
                 <div class="quiz-box">
                     <div class="quiz-header">
-                        <h2 class="question-text">What's Your Age?</h2>
-                        <h6 class="question-desc">Like how old are you bruh</h6>
+                        <h2 class="question-text">In an average week, you exercise:</h2>
+                        <h6 class="question-desc"></h6>
                     </div>
                     <div class="option-list">
                             <div class="option">
-                                <span>Test</span>
+                                <span>Rarely</span>
                         </div>
                             <div class="option">
-                                <span>Test</span>
+                                <span>Two to four times</span>
                         </div>
                             <div class="option">
-                                <span>Test</span>
+                                <span>Five or more times</span>
                 </div>
             </div>
 
