--- a/test.html
+++ b/test.html
@@ -3,53 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles/test.css">
-    <script src="https://kit.fontawesome.com/3651e21373.js"></script>
-
+    <title>Vitamin App</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Luckiest+Guy&family=Pixelify+Sans:wght@500&family=Public+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@1,500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Vitamin App</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Luckiest+Guy&family=Pixelify+Sans:wght@500&family=Public+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@1,500&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <section class="questions section">
-            <section class="quiz-section">
-                <div class="quiz-box">
-                    <div class="quiz-header">
-                        <h2 class="question-text">In an average week, you exercise:</h2>
-                        <h6 class="question-desc"></h6>
-                    </div>
-                    <div class="option-list">
-                            <div class="option">
-                                <span>Rarely</span>
-                        </div>
-                            <div class="option">
-                                <span>Two to four times</span>
-                        </div>
-                            <div class="option">
-                                <span>Five or more times</span>
+    <main class="main">
+        <header class="header">
+            <a href="#" class="logo">VitaMatch</a>
+
+            <nav class="navbar">
+                <a href="#" class="active">Home</a>
+                <a href="#">About</a>
+                <a href="#">Services</a>
+                <a href="#">Contact</a>
+            </nav>
+        </header>
+        <div class="container">
+        <section class="quiz-section">
+            <div class="quiz-box">
+                <h1> Vitamin Questionnare</h1>
+                <div class="quiz-header">
+                    <span>Progress Bar Goes Here</span>
+                </div>
+
+                <h2 class="question-text">What's Your Age?</h2>
+
+                <div class="option-list">
+                </div>
+                <div class="quiz-footer">
+                    <button class="prev-btn">Prev</button>
+                    <button class="next-btn">Next</button>
+
+                    <script>
+                        const button = document.querySelector(".next-btn");
+                        button.addEventListener("click", (e) => {
+                            e.preventDefault();
+                            button.classList.add("animate");
+                            setTimeout(() => {
+                                button.classList.remove("animate");
+                            }, 600)
+                        });
+                    </script>
                 </div>
             </div>
-
-                    <div class="quiz-footer">
-                        <button class="prev-btn">Prev</button>
-                        <button class="next-btn">Next</button>
-                    </div>
+            <div class="result-box">
+                <h2>Results!</h2>
+                <div class="buttons">
+                    <button class="tryAgain-btn">Take It Again!</button>
+                    <button class="goHome-btn">Go To Home</button>
                 </div>
-                </section> 
-            </section>
-    
+            </div>
+            <!-- <div class="pill">
+                <div class="white"></div>
+                <div class="purple"></div>
+            </div> -->
+        </section>
+        <section class="home">
+            <div class="home-content">
+                <h1>Personalized Vitamins Within Minutes.</h1>
+                <button class="start-btn">Let's Go!</button>
+            </div>
+            <video autoplay loop muted playsinline>
+                <source src="/assets/background-video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>    
+        <!-- </section>
+        <section class="information-section">
+            <h2>How It Works</h2>
+            <p>Our website helps you find the right vitamins for your needs. Here's how it works:</p>
+            <ol>
+                <li>Start the questionnaire to provide us with some basic information about your health.</li>
+                <li>We analyze your answers and match you with personalized vitamin recommendations.</li>
+                <li>View your results and get recommendations for a healthier life.</li>
+            </ol>
+        </section> -->
+        </div>
+    </main>
 
-    <script type="module" src="test.js"></script>
+    <div class="popup-info">
+        <h2>Questionnare Guide</h2>
+        <span class="info">1. Try to answer the questions to the best of your ability.</span>
+        <span class="info">2. This is not an official diagnosis. Consult a medical professional if your health situation is urgent.</span>
+        <span class="info">3. By taking this questionnare you consent to give away basic health information.</span>
+        <span class="info">4. Thanks for choosing VitaMatch!</span>
+
+        <div class="btn-group">
+            <button class="info-btn exit-btn">Exit Questionnare</button>
+            <a href="#" class="info-btn continue-btn">Continue</a>
+        </div>
+    </div>
+
+    <script type="module" src="questions.js"></script>
+    <script type="module" src="recommendationSystem.js"></script> <!-- David Trujillo added this t -->
+    <script type="module" src="quiz.js"></script>
 </body>
 </html>
 
