--- a/test.html
+++ b/test.html
@@ -96,8 +96,8 @@
         </div>
     </div>
 
-    <script type="module" src="questions.js"></script>
-    <script type="module" src="recommendationSystem.js"></script> <!-- David Trujillo added this t -->
+    <script type="module" src="newquestions.js"></script>
+    <script type="module" src="JS/recommendationSystem.js"></script> <!-- David Trujillo added this t -->
     <script type="module" src="quiz.js"></script>
 </body>
 </html>
