--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vitamin App</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/test.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Luckiest+Guy&family=Pixelify+Sans:wght@500&family=Public+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@1,500&display=swap" rel="stylesheet">
@@ -98,7 +98,7 @@
 
     <script type="module" src="newquestions.js"></script>
     <script type="module" src="JS/recommendationSystem.js"></script> <!-- David Trujillo added this t -->
-    <script type="module" src="quiz.js"></script>
+    <script type="module" src="test.js"></script>
 </body>
 </html>
 
