--- a/quiz.html
+++ b/quiz.html
@@ -212,13 +212,30 @@
                 </label>
             </div>
         </div>
+        <button class="cont-btn">Continue</button>
     </div> 
+
+    <main class="main" style="display: none;">
+        <section class="quiz-section">
+            <div class="quiz-box">
+                <h1> Vitamin Questionnare</h1>
+
+                <h2 class="question-text">What's Your Age?</h2>
+
+                <div class="option-list">
+                </div>
+                <div class="quiz-footer">
+                    <button class="prev-btn">Prev</button>
+                    <button class="next-btn">Next</button>
+                </div>
+        </section>
+    </main>
     </section>
-
-
 
     <!-- JQuery for animations -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script type="module" src="JS/questions.js"></script>
+    <script type="module" src="JS/questionnaire.js"></script>
     <script type="module" src="JS/quiz.js"></script>
     
 </body>
