--- a/test.html
+++ b/test.html
@@ -10,97 +10,32 @@
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Luckiest+Guy&family=Pixelify+Sans:wght@500&family=Public+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Rubik:ital,wght@1,500&display=swap" rel="stylesheet">
 </head>
 <body>
+    <section class="questions section">
     <main class="main">
-        <header class="header">
-            <a href="#" class="logo">VitaMatch</a>
-
-            <nav class="navbar">
-                <a href="#" class="active">Home</a>
-                <a href="#">About</a>
-                <a href="#">Services</a>
-                <a href="#">Contact</a>
-            </nav>
-        </header>
-        <div class="container">
         <section class="quiz-section">
             <div class="quiz-box">
                 <h1> Vitamin Questionnare</h1>
-                <div class="quiz-header">
-                    <span>Progress Bar Goes Here</span>
-                </div>
+    
 
-                <h2 class="question-text">What's Your Age?</h2>
+                <h2 class="question-text"></h2>
 
                 <div class="option-list">
                 </div>
                 <div class="quiz-footer">
                     <button class="prev-btn">Prev</button>
                     <button class="next-btn">Next</button>
-
-                    <script>
-                        const button = document.querySelector(".next-btn");
-                        button.addEventListener("click", (e) => {
-                            e.preventDefault();
-                            button.classList.add("animate");
-                            setTimeout(() => {
-                                button.classList.remove("animate");
-                            }, 600)
-                        });
-                    </script>
                 </div>
-            </div>
-            <div class="result-box">
-                <h2>Results!</h2>
-                <div class="buttons">
-                    <button class="tryAgain-btn">Take It Again!</button>
-                    <button class="goHome-btn">Go To Home</button>
-                </div>
-            </div>
-            <!-- <div class="pill">
-                <div class="white"></div>
-                <div class="purple"></div>
-            </div> -->
         </section>
-        <section class="home">
-            <div class="home-content">
-                <h1>Personalized Vitamins Within Minutes.</h1>
-                <button class="start-btn">Let's Go!</button>
-            </div>
-            <video autoplay loop muted playsinline>
-                <source src="/assets/background-video.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>    
-        <!-- </section>
-        <section class="information-section">
-            <h2>How It Works</h2>
-            <p>Our website helps you find the right vitamins for your needs. Here's how it works:</p>
-            <ol>
-                <li>Start the questionnaire to provide us with some basic information about your health.</li>
-                <li>We analyze your answers and match you with personalized vitamin recommendations.</li>
-                <li>View your results and get recommendations for a healthier life.</li>
-            </ol>
-        </section> -->
-        </div>
     </main>
+</section>
 
-    <div class="popup-info">
-        <h2>Questionnare Guide</h2>
-        <span class="info">1. Try to answer the questions to the best of your ability.</span>
-        <span class="info">2. This is not an official diagnosis. Consult a medical professional if your health situation is urgent.</span>
-        <span class="info">3. By taking this questionnare you consent to give away basic health information.</span>
-        <span class="info">4. Thanks for choosing VitaMatch!</span>
-
-        <div class="btn-group">
-            <button class="info-btn exit-btn">Exit Questionnare</button>
-            <a href="#" class="info-btn continue-btn">Continue</a>
-        </div>
-    </div>
 
     <script type="module" src="newquestions.js"></script>
-    <script type="module" src="JS/recommendationSystem.js"></script> <!-- David Trujillo added this t -->
+    <script type="module" src="JS/recommendationSystem.js"></script> 
     <script type="module" src="test.js"></script>
 </body>
 </html>
+
 
 
 
