--- a/index.html
+++ b/index.html
@@ -42,6 +42,143 @@
 
             <div class="pill">
                 <button class="pillButton" onclick="fillCapsule()">Click Me!</button>
+                <div class="particle1">
+                    <svg width="64" height="64" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+                        <path id="eggplantStem"
+                        fill="green" stroke="black" stroke-width="1"
+                        d="M 34.00,14.00
+                        C 34.00,14.00 47.00,10.90 47.00,10.90
+                            47.00,10.90 59.00,5.00 59.00,5.00
+                            59.00,5.00 52.28,13.01 52.28,13.01
+                            52.28,13.01 54.00,26.00 54.00,26.00
+                            54.00,26.00 49.00,21.00 49.00,21.00
+                            49.00,21.00 41.00,25.00 41.00,25.00
+                            41.00,25.00 42.00,17.00 42.00,17.00
+                            37.78,16.85 37.08,17.04 34.00,14.00 Z
+                        M 45.00,13.00
+                        C 45.00,13.00 42.00,16.00 42.00,16.00
+                            42.00,16.00 46.00,14.00 46.00,14.00
+                            46.00,14.00 45.00,13.00 45.00,13.00 Z" />
+                        <path id="eggplantBody"
+                        fill="purple" stroke="black" stroke-width="1"
+                        d="M 48.00,24.00
+                            C 51.67,30.12 47.98,33.71 44.28,39.00
+                                38.62,47.08 27.01,60.71 16.00,59.77
+                                3.56,58.72 0.58,44.19 9.11,36.33
+                                9.11,36.33 22.00,27.97 22.00,27.97
+                                28.28,23.69 31.22,18.60 39.00,19.00
+                                39.28,26.92 41.28,27.06 48.00,24.00 Z" />
+                    </svg>
+                </div>
+                <div class="particle2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64">
+                    <path id="Selection"
+                            fill="yellow" stroke="black" stroke-width="1"
+                            d="M 41.00,6.00
+                            C 44.46,8.31 45.10,12.12 44.00,16.00
+                                44.00,16.00 41.00,6.00 41.00,6.00 Z
+                            M 46.00,10.00
+                            C 46.00,10.00 50.00,14.00 50.00,14.00
+                                46.93,12.93 47.07,13.07 46.00,10.00 Z
+                            M 54.00,15.00
+                            C 68.71,24.36 62.05,53.05 41.00,58.00
+                                40.04,48.21 44.22,48.68 48.82,41.00
+                                53.97,31.73 53.67,25.22 48.82,16.00
+                                54.01,16.82 54.14,17.97 58.00,21.00
+                                58.00,21.00 54.00,15.00 54.00,15.00 Z
+                            M 7.00,38.00
+                            C 16.30,37.57 24.01,35.65 30.82,28.82
+                                35.49,24.13 35.57,19.08 42.00,17.00
+                                37.29,31.12 36.64,38.31 21.00,44.19
+                                15.11,46.40 8.82,46.95 5.00,41.00
+                                5.00,41.00 11.00,41.00 11.00,41.00
+                                11.00,41.00 7.00,38.00 7.00,38.00 Z
+                            M 18.00,47.00
+                            C 27.30,42.67 31.29,42.50 37.29,33.00
+                                41.89,25.70 41.09,19.06 45.20,17.88
+                                49.74,16.58 50.82,22.95 50.96,26.00
+                                52.01,49.08 27.65,58.98 17.00,51.00
+                                17.00,51.00 22.00,48.00 22.00,48.00
+                                22.00,48.00 18.00,47.00 18.00,47.00 Z
+                            M 2.00,40.00
+                            C 2.00,40.00 5.00,38.00 5.00,38.00
+                                5.00,38.00 3.00,41.00 3.00,41.00
+                                3.00,41.00 2.00,40.00 2.00,40.00 Z
+                            M 13.00,51.00
+                            C 14.13,48.29 14.13,48.55 17.00,48.00
+                                17.00,48.00 13.00,51.00 13.00,51.00 Z" />
+                    </svg>
+                </div>
+                <div class="particle3">
+                    <svg width="64" height="64" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+                        <path id="orangeInner"
+                        fill="orange" stroke="black" stroke-width="1"
+                        d="M 5.00,53.00
+                            C 9.05,46.11 11.49,53.76 23.00,55.68
+                                32.22,57.21 40.52,53.40 46.96,46.96
+                                52.89,41.04 56.49,33.53 55.90,25.00
+                                55.05,12.51 45.67,9.31 53.00,5.00
+                                56.36,10.58 59.11,15.35 59.83,22.00
+                                61.79,40.11 50.91,57.53 32.00,59.82
+                                20.78,61.18 14.35,58.70 5.00,53.00 Z
+                            M 32.00,25.00
+                            C 34.13,22.03 42.31,12.20 45.90,12.20
+                                48.00,12.20 49.27,14.38 50.08,16.02
+                                50.65,17.17 51.18,18.75 51.47,20.00
+                                51.86,21.67 51.92,23.30 52.00,25.00
+                                52.00,25.00 32.00,25.00 32.00,25.00 Z
+                            M 32.00,29.00
+                            C 32.00,29.00 52.00,29.00 52.00,29.00
+                                51.44,35.22 50.03,37.66 47.00,43.00
+                                41.17,40.24 35.73,34.22 32.00,29.00 Z
+                            M 24.00,32.00
+                            C 24.00,32.00 25.00,52.00 25.00,52.00
+                                23.30,51.92 21.67,51.86 20.00,51.47
+                                18.75,51.18 17.17,50.65 16.02,50.08
+                                6.55,45.37 19.13,36.87 24.00,32.00 Z
+                            M 29.00,32.00
+                            C 34.22,35.73 40.24,41.17 43.00,47.00
+                                37.66,50.03 35.22,51.44 29.00,52.00
+                                29.00,52.00 29.00,32.00 29.00,32.00 Z" />
+                    </svg>
+                </div>
+                <div class="particle4">
+                    <svg width="64" height="64" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+                        <path id="tomatoBody"
+                        fill="red" stroke="black" stroke-width="1"
+                        d="M 41.00,20.10
+                        C 43.26,19.90 47.00,19.36 48.99,20.10
+                            58.05,23.96 59.92,40.02 55.59,48.00
+                            49.80,58.65 38.41,62.24 27.00,60.82
+                            16.15,59.46 6.52,50.06 6.04,39.00
+                            5.79,33.14 8.43,22.45 15.01,20.78
+                            17.18,20.23 19.94,21.34 22.00,22.00
+                            22.00,22.00 20.00,32.00 20.00,32.00
+                            20.00,32.00 32.00,26.09 32.00,26.09
+                            32.00,26.09 43.00,29.00 43.00,29.00
+                            43.00,29.00 41.00,20.10 41.00,20.10 Z
+                        M 10.00,37.00
+                        C 6.66,45.69 15.41,54.63 23.00,57.44
+                            26.59,58.77 29.26,58.92 33.00,59.00
+                            29.62,53.93 25.98,57.18 19.02,51.61
+                            11.64,45.72 13.76,42.70 10.00,37.00 Z" />
+                        <path id="tomatoStem"
+                        fill="green" stroke="black" stroke-width="1"
+                        d="M 25.00,3.00
+                            C 25.00,3.00 34.10,11.98 34.10,11.98
+                                34.10,11.98 48.00,16.00 48.00,16.00
+                                43.21,17.99 42.06,18.18 37.00,17.00
+                                37.00,17.00 36.00,18.00 36.00,18.00
+                                36.00,18.00 40.00,25.00 40.00,25.00
+                                36.01,24.53 35.12,24.53 33.00,21.00
+                                33.00,21.00 24.00,26.00 24.00,26.00
+                                24.00,26.00 27.00,19.00 27.00,19.00
+                                21.21,18.98 19.13,19.54 15.00,15.00
+                                26.39,11.31 24.40,13.46 31.00,17.00
+                                31.00,17.00 25.00,3.00 25.00,3.00 Z" />
+                    </svg>
+                </div>
+
                 <div class="capsule">
                     <svg id="caps" width="400" height="200" viewBox="0 0 400 200" xmlns="http://www.w3.org/2000/svg">
                         <defs>
@@ -49,11 +186,11 @@
                                 <rect id="clipRect" x="50" y="40" width="300" height="120" rx="70" ry="70"/>
                             </clipPath>
                             <linearGradient id="colorGradient" x1="0%" y1="0%" x2="100%" y2="0%">
-                                <stop offset="0%" style="stop-color: #66ffcc" />
-                                <stop offset="100%" style="stop-color: #66a4d4" />
+                                <stop offset="0%" style="stop-color: #ED9A76" />
+                                <stop offset="100%" style="stop-color: #ED9A76" />
                             </linearGradient>
                         </defs>
-                        <rect id="innerRect" x="50" y="40" width="5" height="120" rx="20" ry="20" fill="url(#colorGradient)"/>
+                        <rect id="innerRect" x="50" y="40" width="5" height="120" fill="url(#colorGradient)"/>
                         <rect id="outerRect" x="50" y="40" width="300" height="120" rx="70" ry="70" fill="transparent" stroke="#28282B" stroke-width="5px"/>
                         <rect id="middleLine" x="200" y="40" width="3" height="120" fill="#28282B"/>
                     </svg>                      
@@ -62,10 +199,21 @@
                 <script>
                     let fillPercentage = 0;
                     let isFirstClick = true;
+                    let currentParticle = 1;
                     function fillCapsule() {
                         fillPercentage += 7;
                         const innerRect = document.getElementById("innerRect");
                         const capsule = document.querySelector(".capsule");
+                        const particles = document.querySelectorAll(".particle");
+                        const currentParticleElement = document.querySelector(`.particle${currentParticle}`);
+                        
+                        particles.forEach(particle => {
+                            particle.style.display = "none"; // Hide all particles
+                        });
+
+                        currentParticleElement.style.display = "block";
+                        currentParticle = (currentParticle % 4) + 1;
+
                         if(isFirstClick){
                             isFirstClick = false;
                             innerRect.style.fill = "url(#colorGradient)";
@@ -73,21 +221,18 @@
                         else if (fillPercentage <= 100) {
                             innerRect.style.width = `${fillPercentage}%`;
                         }
+
                         capsule.classList.add("wobble");
+                        currentParticleElement.classList.add("animateDropAndDisappear");
                         setTimeout(() => {
                             capsule.classList.remove("wobble");
+                            currentParticleElement.classList.remove("animateDropAndDisappear");
                         }, 500);
 
-                        const colorGradient = document.getElementById("colorGradient");
-                        colorGradient.children[0].style.stopColor = getRandomColor();
-                        colorGradient.children[1].style.stopColor = getRandomColor();
-                    }
-
-                    function getRandomColor() {
-                        return "#" + Math.floor(Math.random()*16777215).toString(16);
                     }
                 </script>
             </div>
+
             <div class="result-box">
                 <h2>Results!</h2>
                 <div class="buttons">
