--- a/quiz.html
+++ b/quiz.html
@@ -198,10 +198,10 @@
                 </label>
             </div>
             <div class="tile">
-                <input type="checkbox" name="Hair, Skin & Nails" id="Hair, Skin & Nails1">
-                <label for="Hair, Skin & Nails1">
+                <input type="checkbox" name="Cosmetics" id="Cosmetics1">
+                <label for="Cosmetics1">
                     <i class="fas fa-hand-dots"></i>
-                    <h6>Hair, Skin & Nails</h6>
+                    <h6>Cosmetics</h6>
                 </label>
             </div>
             <div class="tile">
