--- a/quiz.html
+++ b/quiz.html
@@ -230,7 +230,17 @@
                 </div>
         </section>
     </main>
+    <section class="lifestyle section" style="display:none;">
+        <img src="assets/lifestyle-bg.jpg" alt="" class="white-bg">
+            <div class="basics-content">
+                <h3>04</h3>
+                <h1>Lifestyle</h1>
+                <p>Start by giving us some basic background info so we 
+                    understand where you are in your path to wellness.</p>
+                <a href="#" class="next-question-lifestyle">Next Question</a>
+            </div>
     </section>
+</section>
 
     <!-- JQuery for animations -->
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
