--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                             </div>
     
                             <div class="card-content">
-                                <h2 class="name">Khoi Nyugen</h2>
+                                <h2 class="name">Khoi Nguyen</h2>
                                 <p class="description">Research and Development</p>
     
                                 <a href="https://www.linkedin.com/in/khoi-n-0b62682a0/" class="button" id="btn5" target="_blank">About Me</a>
