--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <button class="next-btn">Next</button>
                 </div>
             </div>
-
+            
             <div class="pill">
                 <button class="pillButton" onclick="fillCapsule()">Click Me!</button>
                 <div class="particle1">
@@ -178,6 +178,33 @@
                                 31.00,17.00 25.00,3.00 25.00,3.00 Z" />
                     </svg>
                 </div>
+                <div class="particle5">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64">
+                    <path id="leek"
+                            fill="green" stroke="black" stroke-width="1"
+                            d="M 22.00,2.00
+                            C 22.00,2.00 25.07,3.59 25.07,3.59
+                                25.07,3.59 31.00,22.00 31.00,22.00
+                                23.98,17.65 22.18,9.87 22.00,2.00 Z
+                            M 17.00,4.00
+                            C 17.00,4.00 19.00,4.00 19.00,4.00
+                                19.00,4.00 22.00,11.00 22.00,11.00
+                                22.00,11.00 16.00,7.00 16.00,7.00
+                                16.00,7.00 16.00,5.00 16.00,5.00
+                                16.00,5.00 17.00,4.00 17.00,4.00 Z
+                            M 12.00,7.00
+                            C 17.53,8.62 19.72,11.43 23.00,16.00
+                                17.60,14.29 13.99,12.52 12.00,7.00 Z
+                            M 8.00,12.00
+                            C 13.38,11.82 17.48,14.90 22.00,17.60
+                                34.19,24.89 37.74,31.61 45.23,43.00
+                                45.23,43.00 50.12,50.00 50.12,50.00
+                                53.27,55.50 49.80,57.95 47.19,56.83
+                                44.46,55.66 42.30,49.64 40.83,47.00
+                                37.09,40.27 31.72,32.40 25.99,27.29
+                                21.28,23.09 10.78,16.69 8.00,12.00 Z" />
+                    </svg>
+                </div>
 
                 <div class="capsule">
                     <svg id="caps" width="400" height="200" viewBox="0 0 400 200" xmlns="http://www.w3.org/2000/svg">
@@ -212,7 +239,7 @@
                         });
 
                         currentParticleElement.style.display = "block";
-                        currentParticle = (currentParticle % 4) + 1;
+                        currentParticle = (currentParticle % 5) + 1;
 
                         if(isFirstClick){
                             isFirstClick = false;
@@ -222,12 +249,14 @@
                             innerRect.style.width = `${fillPercentage}%`;
                         }
 
-                        capsule.classList.add("wobble");
                         currentParticleElement.classList.add("animateDropAndDisappear");
-                        setTimeout(() => {
-                            capsule.classList.remove("wobble");
+                        setTimeout(() => {         
+                            capsule.classList.add("wobble");
                             currentParticleElement.classList.remove("animateDropAndDisappear");
-                        }, 500);
+                            setTimeout(() => {
+                                capsule.classList.remove("wobble");
+                            }, 500);
+                        }, 700);
 
                     }
                 </script>
@@ -242,7 +271,7 @@
                 <div class="resultPill" id="resultPill">
                     <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" viewBox="0 0 64 64">
                         <path id="pillInner"
-                        fill="red" stroke="black" stroke-width="1"
+                        fill="#ED9A76" stroke="black" stroke-width="1"
                         d="M 22.00,19.00
                         C 26.85,14.15 34.42,5.27 41.00,3.56
                             52.84,0.47 63.53,11.16 60.44,23.00
@@ -263,14 +292,14 @@
                 <div class="bottle">
                     <svg xmlns="http://www.w3.org/2000/svg" width="5.33267in" height="5.33267in" viewBox="0 0 512 512">
                         <path id="bottleCap"
-                        fill="yellow" stroke="black" stroke-width="1"
+                        fill="#E8E5E0" stroke="black" stroke-width="1"
                         d="M 151.00,14.00
                         C 151.00,14.00 361.00,14.00 361.00,14.00
                             361.00,14.00 361.00,74.00 361.00,74.00
                             361.00,74.00 151.00,74.00 151.00,74.00
                             151.00,74.00 151.00,14.00 151.00,14.00 Z" />
                         <path id="bottleBody"
-                        fill="cyan" stroke="black" stroke-width="1"
+                        fill="#FF7E00" stroke="black" stroke-width="1"
                         d="M 181.00,89.00
                         C 181.00,89.00 331.00,89.00 331.00,89.00
                             331.00,89.00 331.00,104.14 331.00,104.14
@@ -326,7 +355,7 @@
                             159.18,465.92 151.03,456.38 151.00,440.00
                             151.00,440.00 151.00,376.00 151.00,376.00 Z" />
                         <path id="bottleTag"
-                        fill="white" stroke="black" stroke-width="1"
+                        fill="#fffdfd" stroke="black" stroke-width="1"
                         d="M 121.00,209.00
                         C 121.00,209.00 391.00,209.00 391.00,209.00
                             391.00,209.00 391.00,361.00 391.00,361.00
@@ -334,12 +363,6 @@
                             121.00,361.00 121.00,209.00 121.00,209.00 Z" />
                     </svg>
                 </div>
-
-                <script>
-                    $("#resultPill").click(function(){
-                        alert("Clicked");
-                    });
-                </script>
             </div>
             
         </section>
