working except for next-btn active

--- a/quiz.html
+++ b/quiz.html
@@ -241,15 +241,15 @@
             </div>
     </section>
     <section class="lifestyle-quiz" style="display: none;">
-        <section class="quiz-section">
-            <div class="quiz-box">
+        <section class="lifestyle-section">
+            <div class="lifestyle-box">
                 <h1>Vitamin Questionnare</h1>
 
-                <h2 class="question-text">What's Your Age?</h2>
+                <h2 class="lifestyle-text">What's Your Age?</h2>
 
-                <div class="option-list">
+                <div class="lifestyle-list">
                 </div>
-                <div class="quiz-footer">
+                <div class="lifestyle-footer">
                     <button class="prev-btn">Prev</button>
                     <button class="next-btn">Next</button>
                 </div>
