FULLY FUNCTIONING UP ALL LIFESTYLE QUESTIONS

--- a/quiz.html
+++ b/quiz.html
@@ -250,8 +250,8 @@
                 <div class="lifestyle-list">
                 </div>
                 <div class="lifestyle-footer">
-                    <button class="prev-btn">Prev</button>
-                    <button class="next-btn">Next</button>
+                    <button class="prev-btn1">Prev</button>
+                    <button class="next-btn1">Next</button>
                 </div>
         </section>
     </section>
