--- a/test.html
+++ b/test.html
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+    <section class="questions section">
     <section class="results-section">
         <div class="made-for-section" style="background: url('assets/made-for.jpg') center/cover no-repeat">
             <div class="made-for-text">
@@ -107,6 +108,7 @@
             <div class="swiper-pagination"></div>
         </div>
     </section>
+</section>
     
     <script src="JS/swiper-bundle.min.js"></script>
 
