--- a/test.html
+++ b/test.html
@@ -35,7 +35,7 @@
                             <h2 class="name">Vitamin A</h2>
                             <p class="description">Vitamin Desc</p>
 
-                            <a href="" class="button" id="btn1" target="_blank">Learn More</a>
+                            <a class="button" id="btn1" onclick="togglePopup()">Learn More</a>
                         </div>
                     </div>
                     <div class="card swiper-slide">
@@ -51,7 +51,7 @@
                             <h2 class="name">Vitamin B</h2>
                             <p class="description">Vitamin Desc</p>
 
-                            <a href="" class="button" id="btn2" target="_blank">Learn More</a>
+                            <a class="button" id="btn2" onclick="togglePopup()">Learn More</a>
                         </div>
                     </div>
                     <div class="card swiper-slide">
@@ -67,7 +67,7 @@
                             <h2 class="name">Vitamin C</h2>
                             <p class="description">Vitamin Desc</p>
 
-                            <a href="" class="button" id="btn3" target="_blank">Learn More</a>
+                            <a class="button" id="btn3" onclick="togglePopup()">Learn More</a>
                         </div>
                     </div>
                     <div class="card swiper-slide">
@@ -82,7 +82,7 @@
                         <div class="card-content">
                             <h2 class="name">Vitamin D</h2>
                             <p class="description">Vitamin Desc</p>
-                            <a href="" class="button" id="btn4" target="_blank">Learn More</a>
+                            <a class="button" id="btn4" onclick="togglePopup()">Learn More</a>
                         </div>
                     </div>
                     <div class="card swiper-slide">
@@ -97,7 +97,7 @@
                         <div class="card-content">
                             <h2 class="name">Vitamin E</h2>
                             <p class="description">Vitamin Desc</p>
-                            <a href="" class="button" id="btn5" target="_blank">Learn More</a>
+                            <a class="button" id="btn5" onclick="togglePopup()">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -107,9 +107,22 @@
             <div class="swiper-button-prev swiper-navBtn"></div>
             <div class="swiper-pagination"></div>
         </div>
+        <div class="popup" id="popup1">
+            <div class="overlay"></div>
+            <div class="content">
+                <div class="close-btn" onclick="togglePopup()">&times;</div>
+                <h1>Vitamin Description</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia aperiam libero voluptatibus esse deserunt architecto voluptates aspernatur eveniet? Architecto earum vero, dolores harum laborum atque. Accusantium iusto iure reiciendis. Iure?</p>
+            </div>
+        </div>
     </section>
 </section>
-    
+<script>
+    // Your JavaScript code goes here
+    function togglePopup() {
+        document.getElementById("popup1").classList.toggle('active');
+    }
+</script>
     <script src="JS/swiper-bundle.min.js"></script>
 
     <script type="module"src="test.js"></script>
