added name to results

--- a/quiz.html
+++ b/quiz.html
@@ -626,7 +626,7 @@
         <div class="made-for-section" style="background: url('assets/made-for.jpg') center/cover no-repeat">
             <div class="made-for-text">
                 <h1>Made for</h1><br>
-                <h5>`Person name`</h5>
+                <h5 id="personName">`Person name`</h5>
             </div>
         </div>
         <h1>Here are your results</h1>
