--- a/index.html
+++ b/index.html
@@ -191,10 +191,18 @@
                             <button type="submit"><i class="fas fa-arrow-right"></i></button>
                         </form>
                         <div class="social-icons">
+                            <a href="https://www.facebook.com/OfficialVitaminWorld/" target="_blank">
                             <i class="fab fa-facebook-f"></i>
+                            </a>
+                            <a href="https://github.com/JeremiahHerring/VitaminApp" target="_blank">
                             <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://discord.gg/HTngVWZp" target="_blank"></a>
                             <i class="fab fa-discord"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/in/qasim-hussain-a2b9a628b/" target="_blank"></a>
                             <i class="fab fa-linkedin"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
